# BattleShip

./: CMakeLists.txt  main.cpp
src/Attacks/: BombingAttack.cpp  BombingAttack.h  DoubleAttack.cpp  DoubleAttack.h  IAttackable.h  SimpleAttack.cpp  SimpleAttack.h
src/CLI/: CLI.cpp  CLI.h  IGraphic.h
src/Exceptions/: AttackOutOfBoundsException.h  CellHasAlreadyAttacked.h  InvalidShipPlacementException.h  LoadException.h  NoAvailableAbilityException.h  SaveException.h  ShipSegmentHasAlreadyDestroyedException.h  UnknownCommandException.h  YouLoseException.h  YouWonException.h
src/Field/: Cell.cpp  Cell.h  GameField.cpp  GameField.h
src/GameLogic/: Game.cpp  Game.h  GameController.h
src/GameLogic/Attacks/: BombingAttack.cpp  DoubleAttack.cpp  IAttackable.h  ScannerAttack.cpp  ScannerAttack.h
src/GameLogic/Field/: Cell.cpp  Cell.h  GameField.cpp  GameField.h
src/GameLogic/Managers/: AttackManager.cpp  AttackManager.h  ShipManager.cpp  ShipManager.h
src/GameLogic/Ship/: Ship.cpp  Ship.h  ShipSegment.cpp  ShipSegment.h
src/GameLogic/State/: EnemyTurnState.h  IState.h  LoadState.h  NewGameState.h  NewRoundState.h  PlacingShipsState.h  PlayerTurnState.h  PlayerWonState.h  SaveState.h
src/Graphics/: Graphics.cpp  Graphics.h
src/Input/: Input.cpp  Input.h
src/Managers/: AttackManager.cpp  AttackManager.h  ShipManager.cpp  ShipManager.h
src/Output/: Output.h
src/Ship/: Ship.cpp  Ship.h  ShipSegment.h
src/State/: EnemyTurnState.h  EnemyWonState.h  IState.h  LoadState.h  NewGameState.h  PlacingShipsState.h  PlayerTurnState.h  SaveState.h
src/Utils/: Random.h  commands.json
